Add UDT_CANACTTICK constant - also move UDT_CANMOVETICK during check bounds there is also another one 'attackabletime' found in unit.h but I think that one is meant for combo Eg: monk triple skill combo into blah blah or taekwon kick combo blah blah not very useful to use in this script command
Too bad there is no canattack_tick in the source though
so there is no way to stop unit attack for N mili-seconds

--- a/db/constants.conf
+++ b/db/constants.conf
@@ -3885,6 +3885,7 @@ constants_db: {
 	UDT_STATADD:         54
 	UDT_ROBE:            55
 	UDT_BODY2:           56
+	UDT_CANACTTICK:      57
 
 	comment__: "HatEffect Constants"
 	HAT_EF_BLOSSOM_FLUTTERING:     1
